--- a/css/demo4.css
+++ b/css/demo4.css
@@ -15,7 +15,7 @@
 	--color-title: #fff;
 	--color-subtitle: #fff;
 	--color-subtitle-bg: #fe0e55;
-	background: #101010 url('/home/aaron/Downloads/254A2811_websize.jpg') no-repeat 50% 50%;
+	background: #101010 url('../img/254A2791_websize.jpg') no-repeat 50% 50%;
 	background-size: 100%;
 }
 
