--- a/css/style.css
+++ b/css/style.css
@@ -1541,6 +1541,9 @@ ol {
 
 /* Large Mobile :480px. */
 @media only screen and (max-width: 767px) {
+	.d-sm-none{
+		display: none;
+	}
 	.search-top {
 		display: none;
 	}
@@ -1665,6 +1668,10 @@ ol {
 
 /* small Mobile :320px. */
 @media only screen and (max-width: 479px) {
+	.d-sm-none{
+		display: none;
+	}
+
 	.hero-slider .owl-nav {
 		right: 20px;
 	}
